; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/ath/wil6210/extr_cfg80211.c_wil_probe_client_handle.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/ath/wil6210/extr_cfg80211.c_wil_probe_client_handle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wil6210_priv = type { %struct.wil_sta_info* }
%struct.wil_sta_info = type { i64, i32 }
%struct.wil6210_vif = type { i32 }
%struct.wil_probe_client_req = type { i64, i32 }
%struct.net_device = type { i32 }

@wil_sta_connected = common dso_local global i64 0, align 8
@GFP_KERNEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wil6210_priv*, %struct.wil6210_vif*, %struct.wil_probe_client_req*)* @wil_probe_client_handle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wil_probe_client_handle(%struct.wil6210_priv* %0, %struct.wil6210_vif* %1, %struct.wil_probe_client_req* %2) #0 {
  %4 = alloca %struct.wil6210_priv*, align 8
  %5 = alloca %struct.wil6210_vif*, align 8
  %6 = alloca %struct.wil_probe_client_req*, align 8
  %7 = alloca %struct.net_device*, align 8
  %8 = alloca %struct.wil_sta_info*, align 8
  %9 = alloca i32, align 4
  store %struct.wil6210_priv* %0, %struct.wil6210_priv** %4, align 8
  store %struct.wil6210_vif* %1, %struct.wil6210_vif** %5, align 8
  store %struct.wil_probe_client_req* %2, %struct.wil_probe_client_req** %6, align 8
  %10 = load %struct.wil6210_vif*, %struct.wil6210_vif** %5, align 8
  %11 = call %struct.net_device* @vif_to_ndev(%struct.wil6210_vif* %10)
  store %struct.net_device* %11, %struct.net_device** %7, align 8
  %12 = load %struct.wil6210_priv*, %struct.wil6210_priv** %4, align 8
  %13 = getelementptr inbounds %struct.wil6210_priv, %struct.wil6210_priv* %12, i32 0, i32 0
  %14 = load %struct.wil_sta_info*, %struct.wil_sta_info** %13, align 8
  %15 = load %struct.wil_probe_client_req*, %struct.wil_probe_client_req** %6, align 8
  %16 = getelementptr inbounds %struct.wil_probe_client_req, %struct.wil_probe_client_req* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = getelementptr inbounds %struct.wil_sta_info, %struct.wil_sta_info* %14, i64 %17
  store %struct.wil_sta_info* %18, %struct.wil_sta_info** %8, align 8
  %19 = load %struct.wil_sta_info*, %struct.wil_sta_info** %8, align 8
  %20 = getelementptr inbounds %struct.wil_sta_info, %struct.wil_sta_info* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load i64, i64* @wil_sta_connected, align 8
  %23 = icmp eq i64 %21, %22
  %24 = zext i1 %23 to i32
  store i32 %24, i32* %9, align 4
  %25 = load %struct.net_device*, %struct.net_device** %7, align 8
  %26 = load %struct.wil_sta_info*, %struct.wil_sta_info** %8, align 8
  %27 = getelementptr inbounds %struct.wil_sta_info, %struct.wil_sta_info* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 8
  %29 = load %struct.wil_probe_client_req*, %struct.wil_probe_client_req** %6, align 8
  %30 = getelementptr inbounds %struct.wil_probe_client_req, %struct.wil_probe_client_req* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 8
  %32 = load i32, i32* %9, align 4
  %33 = load i32, i32* @GFP_KERNEL, align 4
  %34 = call i32 @cfg80211_probe_status(%struct.net_device* %25, i32 %28, i32 %31, i32 %32, i32 0, i32 0, i32 %33)
  ret void
}

declare dso_local %struct.net_device* @vif_to_ndev(%struct.wil6210_vif*) #1

declare dso_local i32 @cfg80211_probe_status(%struct.net_device*, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
